k8s/asgard/apps/outline/namespace.yaml
# k8s/asgard/apps/outline/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: outline
